--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body{
   background-color: bisque;
 }
 .container{
-  margin-top: 100px !important;
+  margin-top: 60px !important;
   width: 65%;
   margin: 50px auto 0;
   background-color: white;
@@ -90,8 +90,8 @@ body{
 
 .xzoom-thumbs img{
   margin-top: 10px;
-  /* margin-left: 5px; */
-  /* margin-right: 15px; */
+  margin-left: 5px;
+  margin-bottom: 10px;
   display: inline-block;
   height: 80px;
   width: 80px;
@@ -107,3 +107,36 @@ body{
   border: 1px solid #4aaad2;
   box-shadow: 0 0 3px 0 #4aaad2;
 }
+
+#slide-wrapper{
+	margin-top: 30px;
+  margin-bottom: 10px;
+  max-width: 300px;
+	display: flex;
+	min-height: 100px;
+	align-items: center;
+}
+
+#slider{
+	width: 440px;
+	display: flex;
+	flex-wrap: nowrap;
+	overflow-x: auto;
+}
+
+#slider::-webkit-scrollbar {
+		width: 8px;
+}
+
+#slider::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+#slider::-webkit-scrollbar-thumb {
+  background-color: #dede2e;
+}
+
+#slider::-webkit-scrollbar-thumb:hover{
+    background-color: #18b5ce;
+}
+
